added changes to lesson 6

--- a/lesson-6/style.css
+++ b/lesson-6/style.css
@@ -308,7 +308,7 @@
   /* main 6 */
 
   .main-part-six .container {
-    display: flex;
+
   }
 
   .header-six {
@@ -335,8 +335,7 @@
   /* main 7 */
 
   .main-part-seven .container {
-    display: flex;
-    justify-content: center;
+  
   }
 
   .header-seven {
@@ -363,14 +362,13 @@
     border-radius: 20px;
     padding: 70px;
     display: flex;
-    flex: 1;
     flex-direction: column;
-    width: 100%
   }
 
   .box-one-title {
     font-weight: bold;
     font-size: 30px;
+    margin-top: 20px;
   }
 
   .box-one-description {
@@ -378,12 +376,14 @@
     color: rgb(99, 100, 101);
     margin-bottom: 50px;
     margin-top: 20px;
+    font-weight: bold;
   }
 
   .box-one-description-bottom {
     font-size: 20px;
     color: rgb(99, 100, 101);
     margin-top: 40px;
+    font-weight: bold;
   }
 
   .btn-group-seven {
@@ -450,10 +450,9 @@
 
   .box-two {
     display: flex;
-    flex: 1;
     background-color: white;
     border-radius: 20px;
-    padding: 70px;
+    padding: 90px;
     margin-left: 20px;
     flex-direction: column;
   }
@@ -468,6 +467,7 @@
     color: rgb(99, 100, 101);
     margin-bottom: 50px;
     margin-top: 20px;
+    font-weight: bold;
   }
 
   .btn-row-group li {
@@ -510,8 +510,7 @@
 
  .footer-block {
   display: flex;
-  justify-content: space-between;
-  gap: 170px;
+  justify-content: space-around;
  }
 
  .footer-column {
@@ -538,20 +537,25 @@
 .footer-final {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   padding-bottom: 100px;
+  margin-left: 100px;
 }
 
 .copyright-text {
   color: rgb(99, 100, 101);
-  display: flex;
-  margin-left: 10px;
+  margin-right: 90px;
 }
 
 .icons-footer {
   display: flex;
   gap: 10px;
   margin-left: 620px;
+  margin-right: 80px;
+}
+
+.footer-logo {
+  margin-left: 10px;
 }
 
 .line {
@@ -560,6 +564,5 @@
   align-items: center;
   margin-bottom: 20px;
 }
-
 
   /* footer */
