--- a/graduation-two/style.css
+++ b/graduation-two/style.css
@@ -122,25 +122,20 @@
 }
 .image-left {
   display: flex;
+  width: 100%;
+  flex-grow: 1;
+  flex-basis: 0;
 }
 
-@media screen and (max-width: 1120px) {
-  .main-image {
-    width: 500px;
-  }
-}
 .main-box-right {
   display: flex;
   flex-direction: column;
   margin-left: 70px;
   justify-content: center;
+  flex-grow: 1;
+  flex-basis: 0;
 }
 
-@media screen and (max-width: 1120px) {
-  .main-box-right {
-    min-width: 500px;
-  }
-}
 .main-header {
   color: white;
   font-size: 50px;
@@ -180,7 +175,8 @@
 .input-main input {
   padding: 15px;
   border-radius: 25px;
-  width: 320px;
+  max-width: 320px;
+  width: 100%;
   background-color: rgba(193, 195, 195, 0.618);
   padding-left: 45px;
   font-size: 16px;
