--- a/graduation-two/_main.scss
+++ b/graduation-two/_main.scss
@@ -1,5 +1,5 @@
 .main {
-   
+  
 }
 
 .main-container {
@@ -7,31 +7,34 @@ margin: 0 auto;
 max-width: 1200px;
 }
 
-@media screen and (max-width:1120px) {
-    .main-container {
-        max-width: 800px;
-        }
-}
-
-@media screen and (max-width:1120px) {
-    .main {
-     max-width: 800px;
-    }
-}
-
 .image-left {
     flex-grow: 1; 
     flex-basis: 0;
     display: flex;
-    width: 100%;
+}
+
+@media screen and (max-width:1000px) {
+    .image-left {
+        flex-direction: column;
+        align-items: center;
+    }
 }
 
 .main-image {
-  
+
 }
 
 @media screen and (max-width:1120px) {
     .main-image {
+        max-width: 500px;
+    }
+}
+
+@media screen and (max-width:1000px) {
+    .main-image {    
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
 }
 
@@ -42,12 +45,22 @@ max-width: 1200px;
     justify-content: center;
     flex-grow: 1; 
     flex-basis: 0;
+    width: 100%;
 }
+
 
 @media screen and (max-width:1120px) {
     .main-box-right {
-     
+     padding-bottom: 100px; 
     }
+}
+
+@media screen and (max-width:1000px) {
+    .main-box-right {
+        flex-direction: column;
+        align-items: center;
+
+       }
 }
 
 
@@ -87,16 +100,18 @@ max-width: 1200px;
     gap: 5px;
 }
 
+
 .input-main input {
     padding: 15px;
     border-radius: 25px;
     max-width: 320px;
     width: 100%;
-    background-color: rgba(193, 195, 195, 0.618);
+    background-color: white;
     padding-left: 45px;
     font-size: 16px;
     font-family: "Work Sans", sans-serif;
 }
+
 
 .input-main input::placeholder {
     color: #2B2B2B 
