--- a/graduation-two/_navigation.scss
+++ b/graduation-two/_navigation.scss
@@ -48,6 +48,7 @@
     color: rgb(255, 255, 255);
     font-size: $font-size-s;
     font-family: "Work Sans", sans-serif;
+    font-weight: bold;
 }
 
 
