--- a/graduation-two/style.css
+++ b/graduation-two/style.css
@@ -41,6 +41,7 @@
   color: rgb(255, 255, 255);
   font-size: 22px;
   font-family: "Work Sans", sans-serif;
+  font-weight: bold;
 }
 
 .burger {
@@ -248,6 +249,7 @@
   font-size: 22px;
   font-family: "Work Sans", sans-serif;
   color: white;
+  font-weight: bold;
 }
 
 .left-box-item {
@@ -283,9 +285,10 @@
 
 .middle-text-header {
   font-size: 22px;
-  font-family: "Work Sans", sans-serif;
+  font-family: "Space Mono", monospace;
   color: white;
   margin-bottom: 20px;
+  font-weight: bold;
 }
 
 .middle-text-one, .middle-text-two, .middle-text-three {
@@ -305,9 +308,10 @@
 }
 .right-text-header {
   font-size: 22px;
-  font-family: "Work Sans", sans-serif;
+  font-family: "Space Mono", monospace;
   color: white;
   margin-bottom: 20px;
+  font-weight: bold;
 }
 
 .right-text-one {
