--- a/graduation-two/_main.scss
+++ b/graduation-two/_main.scss
@@ -21,7 +21,7 @@ max-width: 1200px;
 }
 
 .main-image {
-
+    
 }
 
 @media screen and (max-width:1120px) {
@@ -59,7 +59,6 @@ max-width: 1200px;
     .main-box-right {
         flex-direction: column;
         align-items: center;
-
        }
 }
 
@@ -68,6 +67,12 @@ max-width: 1200px;
     color: white;
     font-size: 50px;
     font-family: "Work Sans", sans-serif;
+}
+
+@media screen and (max-width:1000px) {
+    .main-header {
+        margin-top: 50px;
+    }
 }
 
 .main-text {
@@ -100,6 +105,12 @@ max-width: 1200px;
     gap: 5px;
 }
 
+@media screen and (max-width:1000px) {
+    .main-header {
+        margin-top: 50px;
+    }
+}
+
 
 .input-main input {
     padding: 15px;
@@ -118,15 +129,16 @@ max-width: 1200px;
   }
 
   .main-button {
-    width: 320px;
+    max-width: 320px;
+    width: 100%;
     margin-top: 20px;
     border-radius: 25px;
     font-size: 16px;
     display: flex;
     justify-content: center;
-
-
   }
+
+
 
   .main-button-account {
     
