--- a/graduation-two/style.css
+++ b/graduation-two/style.css
@@ -163,6 +163,11 @@
   font-family: "Work Sans", sans-serif;
 }
 
+@media screen and (max-width: 1000px) {
+  .main-header {
+    margin-top: 50px;
+  }
+}
 .main-text {
   margin-top: 20px;
 }
@@ -193,6 +198,11 @@
   gap: 5px;
 }
 
+@media screen and (max-width: 1000px) {
+  .main-header {
+    margin-top: 50px;
+  }
+}
 .input-main input {
   padding: 15px;
   border-radius: 25px;
@@ -213,7 +223,8 @@
 }
 
 .main-button {
-  width: 320px;
+  max-width: 320px;
+  width: 100%;
   margin-top: 20px;
   border-radius: 25px;
   font-size: 16px;
@@ -304,6 +315,7 @@
 @media screen and (max-width: 1120px) {
   .footer-right-box {
     margin-left: 50px;
+    display: block;
   }
 }
 .right-text-header {
@@ -335,6 +347,13 @@
   display: inline-block;
 }
 
+@media screen and (max-width: 600px) {
+  .footer-input {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+}
 .footer-email-input {
   padding: 15px;
   border-radius: 15px;
@@ -343,6 +362,13 @@
   font-family: "Work Sans", sans-serif;
 }
 
+@media screen and (max-width: 600px) {
+  .footer-email-input {
+    border-radius: 20px;
+    flex-grow: 1;
+    width: 100%;
+  }
+}
 .footer-subscribe-button {
   background-color: #A259FF;
   padding: 18px 40px;
@@ -352,12 +378,25 @@
   font-weight: bold;
   position: relative;
   right: 20px;
+  cursor: pointer;
 }
 
+@media screen and (max-width: 1000px) {
+  .footer-subscribe-button {
+    padding: 18px 70px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .footer-subscribe-button {
+    margin-left: 20px;
+    border-radius: 20px;
+    flex-grow: 1;
+    width: 100%;
+  }
+}
 .footer-email-input::-moz-placeholder {
   color: #3B3B3B;
 }
-
 .footer-email-input::placeholder {
   color: #3B3B3B;
 }
@@ -384,6 +423,12 @@
   .footer-trademark {
     margin-left: 50px;
     margin-right: 100px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .footer-trademark {
+    margin-left: 30px;
+    margin-right: 30px;
   }
 }
 .footer-trademark-text {
