--- a/graduation-two/_main.scss
+++ b/graduation-two/_main.scss
@@ -17,6 +17,7 @@ max-width: 1200px;
     .image-left {
         flex-direction: column;
         align-items: center;
+        width: 100%;
     }
 }
 
