--- a/graduation-two/style.css
+++ b/graduation-two/style.css
@@ -121,6 +121,7 @@
   .image-left {
     flex-direction: column;
     align-items: center;
+    width: 100%;
   }
 }
 @media screen and (max-width: 1120px) {
