--- a/graduation-one/_main-two.scss
+++ b/graduation-one/_main-two.scss
@@ -7,24 +7,46 @@
     font-size: 50px;
     font-family: "Work Sans", sans-serif;
     margin-left: 30px;
+    margin-bottom: 50px;
 }
 
 .blur-cards-box {
     display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
 
 .blur-card {
     position: relative;
+    border: solid #2B2B2B;;
+    overflow: hidden;
 }
 
 .blur {
    filter: blur(5px);
+   border-radius: 20px;
 }
 
 .icon-blur {
-position: absolute;
-top: 50%; 
-    left: 50%; 
-    transform: translate(-50%, -50%); 
-    z-index: 1; 
+  position: absolute;
+  top: 50%; 
+  left: 50%; 
+  transform: translate(-50%, -50%); 
+  z-index: 1; 
+}
+
+.blur-down-text {
+    background-color: #3B3B3B;
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+    font-family: "Work Sans", sans-serif;
+    font-size: $font-size-s;
+}
+
+.header-blur-heading {
+    color: white;
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+    padding-left: 15px;
+    padding: 20px;
 }
