--- a/graduation-one/style.css
+++ b/graduation-one/style.css
@@ -495,18 +495,24 @@
   font-size: 50px;
   font-family: "Work Sans", sans-serif;
   margin-left: 30px;
+  margin-bottom: 50px;
 }
 
 .blur-cards-box {
   display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
 
 .blur-card {
   position: relative;
+  border: solid #2B2B2B;
+  overflow: hidden;
 }
 
 .blur {
   filter: blur(5px);
+  border-radius: 20px;
 }
 
 .icon-blur {
@@ -515,4 +521,20 @@
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 1;
+}
+
+.blur-down-text {
+  background-color: #3B3B3B;
+  border-bottom-right-radius: 20px;
+  border-bottom-left-radius: 20px;
+  font-family: "Work Sans", sans-serif;
+  font-size: 22px;
+}
+
+.header-blur-heading {
+  color: white;
+  border-bottom-right-radius: 20px;
+  border-bottom-left-radius: 20px;
+  padding-left: 15px;
+  padding: 20px;
 }/*# sourceMappingURL=style.css.map */
