--- a/graduation-one/_main-two.scss
+++ b/graduation-one/_main-two.scss
@@ -14,6 +14,7 @@
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
+    row-gap: 20px;
 }
 
 .blur-card {
@@ -40,7 +41,8 @@
     border-bottom-right-radius: 20px;
     border-bottom-left-radius: 20px;
     font-family: "Work Sans", sans-serif;
-    font-size: $font-size-s;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 .header-blur-heading {
