--- a/graduation-one/style.css
+++ b/graduation-one/style.css
@@ -502,6 +502,7 @@
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
+  row-gap: 20px;
 }
 
 .blur-card {
@@ -528,7 +529,8 @@
   border-bottom-right-radius: 20px;
   border-bottom-left-radius: 20px;
   font-family: "Work Sans", sans-serif;
-  font-size: 22px;
+  font-size: 20px;
+  font-weight: bold;
 }
 
 .header-blur-heading {
