--- a/graduation-one/style.scss
+++ b/graduation-one/style.scss
@@ -4,7 +4,7 @@
 
 @import "variables";
 
-@import "header", "main", "main-one", "main-two", "main-three"
+@import "header", "main", "main-one", "main-two", "main-three", "footer"
 
 
 
